; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-threadpool-cancel.c_getaddrinfo_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-threadpool-cancel.c_getaddrinfo_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.addrinfo = type { i32 }

@UV_EAI_CANCELED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, %struct.addrinfo*)* @getaddrinfo_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @getaddrinfo_cb(i32* %0, i32 %1, %struct.addrinfo* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.addrinfo*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.addrinfo* %2, %struct.addrinfo** %6, align 8
  %7 = load i32, i32* %5, align 4
  %8 = load i32, i32* @UV_EAI_CANCELED, align 4
  %9 = icmp eq i32 %7, %8
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load %struct.addrinfo*, %struct.addrinfo** %6, align 8
  %13 = icmp eq %struct.addrinfo* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i32 @ASSERT(i32 %14)
  %16 = load %struct.addrinfo*, %struct.addrinfo** %6, align 8
  %17 = call i32 @uv_freeaddrinfo(%struct.addrinfo* %16)
  ret void
}

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @uv_freeaddrinfo(%struct.addrinfo*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
